cmake_minimum_required(VERSION 3.7)
project(catchy)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        build/Debug/GNU-Linux/src/main.o
        build/Debug/GNU-Linux/src/main.o.d
        build/Debug/GNU-Linux/src/main_nomain.o
        build/Debug/GNU-Linux/src/main_nomain.o.d
        build/Debug/GNU-Linux/tests/TestFiles/f1
        build/Debug/GNU-Linux/tests/tests/JumpTableTest.o
        build/Debug/GNU-Linux/tests/tests/JumpTableTest.o.d
        dist/Debug/GNU-Linux/catchy
        docs/setup.md
        lib/googletest/googlemock/docs/v1_5/CheatSheet.md
        lib/googletest/googlemock/docs/v1_5/CookBook.md
        lib/googletest/googlemock/docs/v1_5/Documentation.md
        lib/googletest/googlemock/docs/v1_5/ForDummies.md
        lib/googletest/googlemock/docs/v1_5/FrequentlyAskedQuestions.md
        lib/googletest/googlemock/docs/v1_6/CheatSheet.md
        lib/googletest/googlemock/docs/v1_6/CookBook.md
        lib/googletest/googlemock/docs/v1_6/Documentation.md
        lib/googletest/googlemock/docs/v1_6/ForDummies.md
        lib/googletest/googlemock/docs/v1_6/FrequentlyAskedQuestions.md
        lib/googletest/googlemock/docs/v1_7/CheatSheet.md
        lib/googletest/googlemock/docs/v1_7/CookBook.md
        lib/googletest/googlemock/docs/v1_7/Documentation.md
        lib/googletest/googlemock/docs/v1_7/ForDummies.md
        lib/googletest/googlemock/docs/v1_7/FrequentlyAskedQuestions.md
        lib/googletest/googlemock/docs/CheatSheet.md
        lib/googletest/googlemock/docs/CookBook.md
        lib/googletest/googlemock/docs/DesignDoc.md
        lib/googletest/googlemock/docs/DevGuide.md
        lib/googletest/googlemock/docs/Documentation.md
        lib/googletest/googlemock/docs/ForDummies.md
        lib/googletest/googlemock/docs/FrequentlyAskedQuestions.md
        lib/googletest/googlemock/docs/KnownIssues.md
        lib/googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        lib/googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h.pump
        lib/googletest/googlemock/include/gmock/internal/custom/gmock-matchers.h
        lib/googletest/googlemock/include/gmock/internal/custom/gmock-port.h
        lib/googletest/googlemock/include/gmock/internal/gmock-generated-internal-utils.h
        lib/googletest/googlemock/include/gmock/internal/gmock-generated-internal-utils.h.pump
        lib/googletest/googlemock/include/gmock/internal/gmock-internal-utils.h
        lib/googletest/googlemock/include/gmock/internal/gmock-port.h
        lib/googletest/googlemock/include/gmock/gmock-actions.h
        lib/googletest/googlemock/include/gmock/gmock-cardinalities.h
        lib/googletest/googlemock/include/gmock/gmock-generated-actions.h
        lib/googletest/googlemock/include/gmock/gmock-generated-actions.h.pump
        lib/googletest/googlemock/include/gmock/gmock-generated-function-mockers.h
        lib/googletest/googlemock/include/gmock/gmock-generated-function-mockers.h.pump
        lib/googletest/googlemock/include/gmock/gmock-generated-matchers.h
        lib/googletest/googlemock/include/gmock/gmock-generated-matchers.h.pump
        lib/googletest/googlemock/include/gmock/gmock-generated-nice-strict.h
        lib/googletest/googlemock/include/gmock/gmock-generated-nice-strict.h.pump
        lib/googletest/googlemock/include/gmock/gmock-matchers.h
        lib/googletest/googlemock/include/gmock/gmock-more-actions.h
        lib/googletest/googlemock/include/gmock/gmock-more-matchers.h
        lib/googletest/googlemock/include/gmock/gmock-spec-builders.h
        lib/googletest/googlemock/include/gmock/gmock.h
        lib/googletest/googlemock/make/Makefile
        lib/googletest/googlemock/msvc/2005/gmock.sln
        lib/googletest/googlemock/msvc/2005/gmock.vcproj
        lib/googletest/googlemock/msvc/2005/gmock_config.vsprops
        lib/googletest/googlemock/msvc/2005/gmock_main.vcproj
        lib/googletest/googlemock/msvc/2005/gmock_test.vcproj
        lib/googletest/googlemock/msvc/2010/gmock.sln
        lib/googletest/googlemock/msvc/2010/gmock.vcxproj
        lib/googletest/googlemock/msvc/2010/gmock_config.props
        lib/googletest/googlemock/msvc/2010/gmock_main.vcxproj
        lib/googletest/googlemock/msvc/2010/gmock_test.vcxproj
        lib/googletest/googlemock/msvc/2015/gmock.sln
        lib/googletest/googlemock/msvc/2015/gmock.vcxproj
        lib/googletest/googlemock/msvc/2015/gmock_config.props
        lib/googletest/googlemock/msvc/2015/gmock_main.vcxproj
        lib/googletest/googlemock/msvc/2015/gmock_test.vcxproj
        lib/googletest/googlemock/scripts/generator/cpp/__init__.py
        lib/googletest/googlemock/scripts/generator/cpp/ast.py
        lib/googletest/googlemock/scripts/generator/cpp/gmock_class.py
        lib/googletest/googlemock/scripts/generator/cpp/gmock_class_test.py
        lib/googletest/googlemock/scripts/generator/cpp/keywords.py
        lib/googletest/googlemock/scripts/generator/cpp/tokenize.py
        lib/googletest/googlemock/scripts/generator/cpp/utils.py
        lib/googletest/googlemock/scripts/generator/gmock_gen.py
        lib/googletest/googlemock/scripts/generator/LICENSE
        lib/googletest/googlemock/scripts/generator/README
        lib/googletest/googlemock/scripts/generator/README.cppclean
        lib/googletest/googlemock/scripts/fuse_gmock_files.py
        lib/googletest/googlemock/scripts/gmock-config.in
        lib/googletest/googlemock/scripts/gmock_doctor.py
        lib/googletest/googlemock/scripts/upload.py
        lib/googletest/googlemock/scripts/upload_gmock.py
        lib/googletest/googlemock/src/gmock-all.cc
        lib/googletest/googlemock/src/gmock-cardinalities.cc
        lib/googletest/googlemock/src/gmock-internal-utils.cc
        lib/googletest/googlemock/src/gmock-matchers.cc
        lib/googletest/googlemock/src/gmock-spec-builders.cc
        lib/googletest/googlemock/src/gmock.cc
        lib/googletest/googlemock/src/gmock_main.cc
        lib/googletest/googlemock/test/gmock-actions_test.cc
        lib/googletest/googlemock/test/gmock-cardinalities_test.cc
        lib/googletest/googlemock/test/gmock-generated-actions_test.cc
        lib/googletest/googlemock/test/gmock-generated-function-mockers_test.cc
        lib/googletest/googlemock/test/gmock-generated-internal-utils_test.cc
        lib/googletest/googlemock/test/gmock-generated-matchers_test.cc
        lib/googletest/googlemock/test/gmock-internal-utils_test.cc
        lib/googletest/googlemock/test/gmock-matchers_test.cc
        lib/googletest/googlemock/test/gmock-more-actions_test.cc
        lib/googletest/googlemock/test/gmock-nice-strict_test.cc
        lib/googletest/googlemock/test/gmock-port_test.cc
        lib/googletest/googlemock/test/gmock-spec-builders_test.cc
        lib/googletest/googlemock/test/gmock_all_test.cc
        lib/googletest/googlemock/test/gmock_ex_test.cc
        lib/googletest/googlemock/test/gmock_leak_test.py
        lib/googletest/googlemock/test/gmock_leak_test_.cc
        lib/googletest/googlemock/test/gmock_link2_test.cc
        lib/googletest/googlemock/test/gmock_link_test.cc
        lib/googletest/googlemock/test/gmock_link_test.h
        lib/googletest/googlemock/test/gmock_output_test.py
        lib/googletest/googlemock/test/gmock_output_test_.cc
        lib/googletest/googlemock/test/gmock_output_test_golden.txt
        lib/googletest/googlemock/test/gmock_stress_test.cc
        lib/googletest/googlemock/test/gmock_test.cc
        lib/googletest/googlemock/test/gmock_test_utils.py
        lib/googletest/googlemock/CHANGES
        lib/googletest/googlemock/CMakeLists.txt
        lib/googletest/googlemock/configure.ac
        lib/googletest/googlemock/CONTRIBUTORS
        lib/googletest/googlemock/LICENSE
        lib/googletest/googlemock/Makefile.am
        lib/googletest/googlemock/README.md
        lib/googletest/googletest/build/Debug/GNU-Linux/src/gtest-all.o
        lib/googletest/googletest/build/Debug/GNU-Linux/src/gtest-all.o.d
        lib/googletest/googletest/build/Debug/GNU-Linux/src/gtest_main.o
        lib/googletest/googletest/build/Debug/GNU-Linux/src/gtest_main.o.d
        lib/googletest/googletest/cmake/internal_utils.cmake
        lib/googletest/googletest/codegear/gtest.cbproj
        lib/googletest/googletest/codegear/gtest.groupproj
        lib/googletest/googletest/codegear/gtest_all.cc
        lib/googletest/googletest/codegear/gtest_link.cc
        lib/googletest/googletest/codegear/gtest_main.cbproj
        lib/googletest/googletest/codegear/gtest_unittest.cbproj
        lib/googletest/googletest/dist/Debug/GNU-Linux/libgoogletest.a
        lib/googletest/googletest/docs/AdvancedGuide.md
        lib/googletest/googletest/docs/DevGuide.md
        lib/googletest/googletest/docs/Documentation.md
        lib/googletest/googletest/docs/FAQ.md
        lib/googletest/googletest/docs/Primer.md
        lib/googletest/googletest/docs/PumpManual.md
        lib/googletest/googletest/docs/Samples.md
        lib/googletest/googletest/docs/V1_5_AdvancedGuide.md
        lib/googletest/googletest/docs/V1_5_Documentation.md
        lib/googletest/googletest/docs/V1_5_FAQ.md
        lib/googletest/googletest/docs/V1_5_Primer.md
        lib/googletest/googletest/docs/V1_5_PumpManual.md
        lib/googletest/googletest/docs/V1_5_XcodeGuide.md
        lib/googletest/googletest/docs/V1_6_AdvancedGuide.md
        lib/googletest/googletest/docs/V1_6_Documentation.md
        lib/googletest/googletest/docs/V1_6_FAQ.md
        lib/googletest/googletest/docs/V1_6_Primer.md
        lib/googletest/googletest/docs/V1_6_PumpManual.md
        lib/googletest/googletest/docs/V1_6_Samples.md
        lib/googletest/googletest/docs/V1_6_XcodeGuide.md
        lib/googletest/googletest/docs/V1_7_AdvancedGuide.md
        lib/googletest/googletest/docs/V1_7_Documentation.md
        lib/googletest/googletest/docs/V1_7_FAQ.md
        lib/googletest/googletest/docs/V1_7_Primer.md
        lib/googletest/googletest/docs/V1_7_PumpManual.md
        lib/googletest/googletest/docs/V1_7_Samples.md
        lib/googletest/googletest/docs/V1_7_XcodeGuide.md
        lib/googletest/googletest/docs/XcodeGuide.md
        lib/googletest/googletest/include/gtest/internal/custom/gtest-port.h
        lib/googletest/googletest/include/gtest/internal/custom/gtest-printers.h
        lib/googletest/googletest/include/gtest/internal/custom/gtest.h
        lib/googletest/googletest/include/gtest/internal/gtest-death-test-internal.h
        lib/googletest/googletest/include/gtest/internal/gtest-filepath.h
        lib/googletest/googletest/include/gtest/internal/gtest-internal.h
        lib/googletest/googletest/include/gtest/internal/gtest-linked_ptr.h
        lib/googletest/googletest/include/gtest/internal/gtest-param-util-generated.h
        lib/googletest/googletest/include/gtest/internal/gtest-param-util-generated.h.pump
        lib/googletest/googletest/include/gtest/internal/gtest-param-util.h
        lib/googletest/googletest/include/gtest/internal/gtest-port-arch.h
        lib/googletest/googletest/include/gtest/internal/gtest-port.h
        lib/googletest/googletest/include/gtest/internal/gtest-string.h
        lib/googletest/googletest/include/gtest/internal/gtest-tuple.h
        lib/googletest/googletest/include/gtest/internal/gtest-tuple.h.pump
        lib/googletest/googletest/include/gtest/internal/gtest-type-util.h
        lib/googletest/googletest/include/gtest/internal/gtest-type-util.h.pump
        lib/googletest/googletest/include/gtest/gtest-death-test.h
        lib/googletest/googletest/include/gtest/gtest-message.h
        lib/googletest/googletest/include/gtest/gtest-param-test.h
        lib/googletest/googletest/include/gtest/gtest-param-test.h.pump
        lib/googletest/googletest/include/gtest/gtest-printers.h
        lib/googletest/googletest/include/gtest/gtest-spi.h
        lib/googletest/googletest/include/gtest/gtest-test-part.h
        lib/googletest/googletest/include/gtest/gtest-typed-test.h
        lib/googletest/googletest/include/gtest/gtest.h
        lib/googletest/googletest/include/gtest/gtest_pred_impl.h
        lib/googletest/googletest/include/gtest/gtest_prod.h
        lib/googletest/googletest/m4/acx_pthread.m4
        lib/googletest/googletest/m4/gtest.m4
        lib/googletest/googletest/make/Makefile
        lib/googletest/googletest/msvc/gtest-md.sln
        lib/googletest/googletest/msvc/gtest-md.vcproj
        lib/googletest/googletest/msvc/gtest.sln
        lib/googletest/googletest/msvc/gtest.vcproj
        lib/googletest/googletest/msvc/gtest_main-md.vcproj
        lib/googletest/googletest/msvc/gtest_main.vcproj
        lib/googletest/googletest/msvc/gtest_prod_test-md.vcproj
        lib/googletest/googletest/msvc/gtest_prod_test.vcproj
        lib/googletest/googletest/msvc/gtest_unittest-md.vcproj
        lib/googletest/googletest/msvc/gtest_unittest.vcproj
        lib/googletest/googletest/nbproject/private/c_standard_headers_indexer.c
        lib/googletest/googletest/nbproject/private/configurations.xml
        lib/googletest/googletest/nbproject/private/cpp_standard_headers_indexer.cpp
        lib/googletest/googletest/nbproject/private/launcher.properties
        lib/googletest/googletest/nbproject/private/Makefile-variables.mk
        lib/googletest/googletest/nbproject/private/private.xml
        lib/googletest/googletest/nbproject/configurations.xml
        lib/googletest/googletest/nbproject/Makefile-Debug.mk
        lib/googletest/googletest/nbproject/Makefile-impl.mk
        lib/googletest/googletest/nbproject/Makefile-Release.mk
        lib/googletest/googletest/nbproject/Makefile-variables.mk
        lib/googletest/googletest/nbproject/Package-Debug.bash
        lib/googletest/googletest/nbproject/Package-Release.bash
        lib/googletest/googletest/nbproject/project.xml
        lib/googletest/googletest/samples/prime_tables.h
        lib/googletest/googletest/samples/sample1.cc
        lib/googletest/googletest/samples/sample1.h
        lib/googletest/googletest/samples/sample10_unittest.cc
        lib/googletest/googletest/samples/sample1_unittest.cc
        lib/googletest/googletest/samples/sample2.cc
        lib/googletest/googletest/samples/sample2.h
        lib/googletest/googletest/samples/sample2_unittest.cc
        lib/googletest/googletest/samples/sample3-inl.h
        lib/googletest/googletest/samples/sample3_unittest.cc
        lib/googletest/googletest/samples/sample4.cc
        lib/googletest/googletest/samples/sample4.h
        lib/googletest/googletest/samples/sample4_unittest.cc
        lib/googletest/googletest/samples/sample5_unittest.cc
        lib/googletest/googletest/samples/sample6_unittest.cc
        lib/googletest/googletest/samples/sample7_unittest.cc
        lib/googletest/googletest/samples/sample8_unittest.cc
        lib/googletest/googletest/samples/sample9_unittest.cc
        lib/googletest/googletest/scripts/test/Makefile
        lib/googletest/googletest/scripts/common.py
        lib/googletest/googletest/scripts/fuse_gtest_files.py
        lib/googletest/googletest/scripts/gen_gtest_pred_impl.py
        lib/googletest/googletest/scripts/gtest-config.in
        lib/googletest/googletest/scripts/pump.py
        lib/googletest/googletest/scripts/release_docs.py
        lib/googletest/googletest/scripts/upload.py
        lib/googletest/googletest/scripts/upload_gtest.py
        lib/googletest/googletest/src/gtest-all.cc
        lib/googletest/googletest/src/gtest-death-test.cc
        lib/googletest/googletest/src/gtest-filepath.cc
        lib/googletest/googletest/src/gtest-internal-inl.h
        lib/googletest/googletest/src/gtest-port.cc
        lib/googletest/googletest/src/gtest-printers.cc
        lib/googletest/googletest/src/gtest-test-part.cc
        lib/googletest/googletest/src/gtest-typed-test.cc
        lib/googletest/googletest/src/gtest.cc
        lib/googletest/googletest/src/gtest_main.cc
        lib/googletest/googletest/test/gtest-death-test_ex_test.cc
        lib/googletest/googletest/test/gtest-death-test_test.cc
        lib/googletest/googletest/test/gtest-filepath_test.cc
        lib/googletest/googletest/test/gtest-linked_ptr_test.cc
        lib/googletest/googletest/test/gtest-listener_test.cc
        lib/googletest/googletest/test/gtest-message_test.cc
        lib/googletest/googletest/test/gtest-options_test.cc
        lib/googletest/googletest/test/gtest-param-test2_test.cc
        lib/googletest/googletest/test/gtest-param-test_test.cc
        lib/googletest/googletest/test/gtest-param-test_test.h
        lib/googletest/googletest/test/gtest-port_test.cc
        lib/googletest/googletest/test/gtest-printers_test.cc
        lib/googletest/googletest/test/gtest-test-part_test.cc
        lib/googletest/googletest/test/gtest-tuple_test.cc
        lib/googletest/googletest/test/gtest-typed-test2_test.cc
        lib/googletest/googletest/test/gtest-typed-test_test.cc
        lib/googletest/googletest/test/gtest-typed-test_test.h
        lib/googletest/googletest/test/gtest-unittest-api_test.cc
        lib/googletest/googletest/test/gtest_all_test.cc
        lib/googletest/googletest/test/gtest_break_on_failure_unittest.py
        lib/googletest/googletest/test/gtest_break_on_failure_unittest_.cc
        lib/googletest/googletest/test/gtest_catch_exceptions_test.py
        lib/googletest/googletest/test/gtest_catch_exceptions_test_.cc
        lib/googletest/googletest/test/gtest_color_test.py
        lib/googletest/googletest/test/gtest_color_test_.cc
        lib/googletest/googletest/test/gtest_env_var_test.py
        lib/googletest/googletest/test/gtest_env_var_test_.cc
        lib/googletest/googletest/test/gtest_environment_test.cc
        lib/googletest/googletest/test/gtest_filter_unittest.py
        lib/googletest/googletest/test/gtest_filter_unittest_.cc
        lib/googletest/googletest/test/gtest_help_test.py
        lib/googletest/googletest/test/gtest_help_test_.cc
        lib/googletest/googletest/test/gtest_list_tests_unittest.py
        lib/googletest/googletest/test/gtest_list_tests_unittest_.cc
        lib/googletest/googletest/test/gtest_main_unittest.cc
        lib/googletest/googletest/test/gtest_no_test_unittest.cc
        lib/googletest/googletest/test/gtest_output_test.py
        lib/googletest/googletest/test/gtest_output_test_.cc
        lib/googletest/googletest/test/gtest_output_test_golden_lin.txt
        lib/googletest/googletest/test/gtest_pred_impl_unittest.cc
        lib/googletest/googletest/test/gtest_premature_exit_test.cc
        lib/googletest/googletest/test/gtest_prod_test.cc
        lib/googletest/googletest/test/gtest_repeat_test.cc
        lib/googletest/googletest/test/gtest_shuffle_test.py
        lib/googletest/googletest/test/gtest_shuffle_test_.cc
        lib/googletest/googletest/test/gtest_sole_header_test.cc
        lib/googletest/googletest/test/gtest_stress_test.cc
        lib/googletest/googletest/test/gtest_test_utils.py
        lib/googletest/googletest/test/gtest_throw_on_failure_ex_test.cc
        lib/googletest/googletest/test/gtest_throw_on_failure_test.py
        lib/googletest/googletest/test/gtest_throw_on_failure_test_.cc
        lib/googletest/googletest/test/gtest_uninitialized_test.py
        lib/googletest/googletest/test/gtest_uninitialized_test_.cc
        lib/googletest/googletest/test/gtest_unittest.cc
        lib/googletest/googletest/test/gtest_xml_outfile1_test_.cc
        lib/googletest/googletest/test/gtest_xml_outfile2_test_.cc
        lib/googletest/googletest/test/gtest_xml_outfiles_test.py
        lib/googletest/googletest/test/gtest_xml_output_unittest.py
        lib/googletest/googletest/test/gtest_xml_output_unittest_.cc
        lib/googletest/googletest/test/gtest_xml_test_utils.py
        lib/googletest/googletest/test/production.cc
        lib/googletest/googletest/test/production.h
        lib/googletest/googletest/xcode/Config/DebugProject.xcconfig
        lib/googletest/googletest/xcode/Config/FrameworkTarget.xcconfig
        lib/googletest/googletest/xcode/Config/General.xcconfig
        lib/googletest/googletest/xcode/Config/ReleaseProject.xcconfig
        lib/googletest/googletest/xcode/Config/StaticLibraryTarget.xcconfig
        lib/googletest/googletest/xcode/Config/TestTarget.xcconfig
        lib/googletest/googletest/xcode/gtest.xcodeproj/project.pbxproj
        lib/googletest/googletest/xcode/Resources/Info.plist
        lib/googletest/googletest/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/project.pbxproj
        lib/googletest/googletest/xcode/Samples/FrameworkSample/Info.plist
        lib/googletest/googletest/xcode/Samples/FrameworkSample/runtests.sh
        lib/googletest/googletest/xcode/Samples/FrameworkSample/widget.cc
        lib/googletest/googletest/xcode/Samples/FrameworkSample/widget.h
        lib/googletest/googletest/xcode/Samples/FrameworkSample/widget_test.cc
        lib/googletest/googletest/xcode/Scripts/runtests.sh
        lib/googletest/googletest/xcode/Scripts/versiongenerate.py
        lib/googletest/googletest/CHANGES
        lib/googletest/googletest/CMakeLists.txt
        lib/googletest/googletest/configure.ac
        lib/googletest/googletest/CONTRIBUTORS
        lib/googletest/googletest/LICENSE
        lib/googletest/googletest/Makefile
        lib/googletest/googletest/Makefile.am
        lib/googletest/googletest/README.md
        lib/googletest/appveyor.yml
        lib/googletest/CMakeLists.txt
        lib/googletest/README.md
        lib/googletest/travis.sh
        nbproject/private/c_standard_headers_indexer.c
        nbproject/private/configurations.xml
        nbproject/private/cpp_standard_headers_indexer.cpp
        nbproject/private/launcher.properties
        nbproject/private/Makefile-variables.mk
        nbproject/private/private.xml
        nbproject/configurations.xml
        nbproject/Makefile-Debug.mk
        nbproject/Makefile-impl.mk
        nbproject/Makefile-Release.mk
        nbproject/Makefile-variables.mk
        nbproject/Package-Debug.bash
        nbproject/Package-Release.bash
        nbproject/project.xml
        src/FragmentTable.h
        src/JumpTable.h
        src/JumpTable2.h
        src/main.cpp
        tests/JumpTableTest.cpp
        conf.json
        Makefile)

add_executable(catchy ${SOURCE_FILES})